adjust to implementation of Game series